dmp: Move mapper into mapper class and refactor